--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Tiktok video downloader without watermark."
     />
+    <meta name="google-site-verification" content="6QaVqp6neRE1mw1TXPFjeXqnF9jIWt_JMaZsVL_NWlY" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
